--- a/package.json
+++ b/package.json
@@ -12,13 +12,32 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "leaflet": "^1.7.1",
-    "react": "^17.0.1",
+   
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.1",
+    
     "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+
+"@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.10",
+    "antd": "^4.16.3",
+    
+    "i18next": "^19.9.2",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-xhr-backend": "^3.2.2",
+    "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.0",
+    "react-router-dom": "^5.2.0",
+   
+    "styled-components": "^5.3.0",
+    "typescript": "^4.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +55,12 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
 }
+
+
