--- a/package.json
+++ b/package.json
@@ -9,29 +9,30 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "leaflet": "^1.7.1",
-    "react-bootstrap": "^1.5.2",
-    "react-leaflet": "^3.1.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.0",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.10",
     "antd": "^4.16.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-xhr-backend": "^3.2.2",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-awesome-reveal": "^3.8.1",
+    "react-bootstrap": "^1.5.2",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.0",
+    "react-leaflet": "^3.1.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
